<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tuantrandev.tuantran.sessionmanagement.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtPassword"
        android:hint="@string/password_hint"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/edtUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="42dp"
        android:id="@+id/edtUser"
        android:hint="@string/user_hint"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/tvLogin"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/tvLogin"
        android:text="@string/tv_login"
        android:textStyle="bold"
        android:textColor="@color/tvLogin"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/edtPassword"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
