<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tuantrandev.tuantran.sessionmanagement.Home">

    <TextView
        android:text="@string/tvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@color/tvLogin"
        android:layout_marginTop="92dp"
        android:id="@+id/tvHome" />

    <TextView
        android:text="@string/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHome"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/tvWelcome" />

    <Button
        android:text="@string/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/btnLogout"
        android:layout_below="@+id/tvWelcome"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
